# opmux-backend

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  ai-rule-frontend.md  ai-rule.md  docker-compose.yml  package-lock.json  package.json  rustfmt.toml
.augment/rules/: 3-layer-architecture-guide.md  ai-error-design.md  ai-rule.md  ai-task-plan.md  byterover-rules.md  rust-documentation-guide.md  search-tool-selection-guide.md
.augment/rules/imported/: ai-rule-backend.md  ai-rule.md  ai-task-plan.md
.claude/commands/openspec/: archive.md  proposal.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  security-check.yml
.sisyphus/drafts/: llm-provider-prod-readiness.md
docs/: AGENTS.md  API_REFERENCE.md  CHANGELOG_EXECUTOR.md  CONFIGURATION_TROUBLESHOOTING.md  OBSERVABILITY.md  OPERATIONS_RUNBOOK.md  PROMETHEUS.md  SECURITY.md  engineering-practice.md  rust-documentation-template.md
gateway/: AGENTS.md  Cargo.toml  Dockerfile
gateway/src/: AGENTS.md  lib.rs  main.rs
gateway/src/config/: hot_reload.rs  mod.rs  settings.rs
gateway/src/core/: AGENTS.md  config.rs  contracts.rs  correlation.rs  error.rs  metrics.rs  mod.rs  result.rs  tracing.rs
gateway/src/executor/: config.rs  error.rs  mod.rs  models.rs  service.rs
gateway/src/executor/vendors/: mod.rs  openai.rs  traits.rs
gateway/src/features/: AGENTS.md  mod.rs
gateway/src/features/auth/: AGENTS.md  config.rs  error.rs  handler.rs  mockdata.rs  mod.rs  models.rs  repository.rs  service.rs
gateway/src/features/chat/: handler.rs  mod.rs  models.rs  repository.rs  service.rs
gateway/src/features/executor/: AGENTS.md  error.rs  mod.rs  models.rs  repository.rs  repository_tests.rs  service.rs  service_tests.rs
gateway/src/features/executor/vendors/: AGENTS.md  openai.rs  traits.rs
gateway/src/features/health/: AGENTS.md  error.rs  handler.rs  mod.rs  repository.rs  service.rs  service_tests.rs
gateway/src/features/ingress/: AGENTS.md  constants.rs  error.rs  handler.rs  handler_tests.rs  mockdata.rs  mod.rs  repository.rs  service.rs  service_tests.rs
gateway/src/grpc/: clients.rs  memory.rs  mod.rs  rewrite.rs  router.rs  validation.rs
gateway/src/health/: mod.rs  repository.rs  service.rs
gateway/src/ingress/: repository.rs  service.rs
gateway/src/middleware/: AGENTS.md  auth.rs  correlation_id.rs  metrics.rs  mod.rs  tracing.rs
gateway/tests/: AGENTS.md  OBSERVABILITY_TESTING.md  PERFORMANCE_LOAD_TESTING.md  README.md  executor_integration_test.rs  observability_integration_test.rs
openspec/: AGENTS.md
scripts/: AGENTS.md  check-security.sh  install-hooks.sh  run-integration-tests.sh  run-load-tests.sh
specs/: AGENTS.md  grpc_contract.md  tracing_implementation_plan.md
specs/enhanced_observability/: README.md  design.md  tasks.md
specs/executor_layer/: design.md
specs/gateway_service/: design.md  requirements.md  tasks.md
specs/unified_auth_system/: design.md  requirements.md  tasks.md
