[workspace]
members = ["common", 'gateway']
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
anyhow = "1.0.99"
thiserror = "2.0.16"

# Observability dependencies (Task 10.1.1)
tower-http = "0.6"
uuid = "1.11"
axum-prometheus = "0.7"
chrono = "0.4"
