[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Minimal dependencies for basic HTTP server
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Authentication dependencies
async-trait = "0.1"
# JSON support for health check endpoint
serde_json = "1.0"
# Time handling for health check timestamps
chrono = { version = "0.4", features = ["serde"] }
