[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Minimal dependencies for basic HTTP server
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Authentication dependencies
async-trait = { workspace = true }
# JSON support for health check endpoint
serde_json = "1.0"
# Time handling for health check timestamps
chrono = { version = "0.4", features = ["serde"] }
# HTTP client for LLM API calls
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
tokio = { workspace = true, features = ["test-util"] }
